# cpp-advent-of-code

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
2015/: CMakeLists.txt  main.1.cpp  main.10.cpp  main.11.cpp  main.12.cpp  main.13.cpp  main.14.cpp  main.15.cpp  main.16.cpp  main.17.cpp  main.18.cpp  main.19.cpp  main.2.cpp  main.20.cpp  main.21.cpp  main.22.cpp  main.23.cpp  main.24.cpp  main.25.cpp  main.3.cpp  main.4.cpp  main.5.cpp  main.6.cpp  main.7.cpp  main.8.cpp  main.9.cpp
2016/: CMakeLists.txt  main.1.cpp
shared/: string_util.h
